// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with callback functions 1`] = `
<Fragment>
  <ListSubsectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={2}
    onSelect={[MockFunction]}
    refCallback={[MockFunction]}
    role="none"
    title="test"
  />
</Fragment>
`;

exports[`should render with isCollapsed 1`] = `
<Fragment>
  <ListSubsectionHeader
    isCollapsed={true}
    isCollapsible={false}
    level={2}
    role="none"
    title="test"
  />
</Fragment>
`;

exports[`should render with isCollapsible 1`] = `
<Fragment>
  <ListSubsectionHeader
    isCollapsed={false}
    isCollapsible={true}
    level={2}
    role="none"
    title="test"
  />
</Fragment>
`;

exports[`should render with items 1`] = `
<Fragment>
  <ListSubsectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={2}
    role="listbox"
    title="test"
  />
  <ListItem
    hasChevron={false}
    isDisabled={false}
    isSelectable={true}
    isSelected={false}
    key="123"
  />
  <ListItem
    hasChevron={false}
    isDisabled={false}
    isSelectable={true}
    isSelected={false}
    key="124"
  />
  <ListItem
    hasChevron={false}
    isDisabled={true}
    isSelectable={true}
    isSelected={false}
    key="125"
  />
  <ListItem
    hasChevron={false}
    isDisabled={true}
    isSelectable={true}
    isSelected={false}
    key="126"
  />
  <ListItem
    hasChevron={false}
    isDisabled={true}
    isSelectable={true}
    isSelected={false}
    key="127"
  />
</Fragment>
`;

exports[`should render with level 1`] = `
<Fragment>
  <ListSubsectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={3}
    role="none"
    title="test"
  />
</Fragment>
`;

exports[`should render with no items 1`] = `
<Fragment>
  <ListSubsectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={2}
    role="none"
    title="test"
  />
</Fragment>
`;
